# Adala

./: .dockerignore  .gitignore  404.html  CLAUDE.md  CONTRIBUTION.md  Dockerfile.app  Dockerfile.noop  Dockerfile.worker  LICENSE  README.md  README2.md  api.py  codecov.yml  compass.yml  data_processing.py  database.py  docker-compose.native.yml  docker-compose.yml  docker-entrypoint.sh  env_ex.py  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  server.py  setup.py  utility.py
.cursor/rules/: common-rules.mdc
.github/: CODEOWNERS  dependabot.yml  pr-title-checker-config.json  release.yml
.github/workflows/: argocd-create-app.yml  argocd-delete-app.yml  argocd-deploy.yml  argocd-destroy.yml  argocd-scale-app.yml  argocd-scaledown.yml  build_pypi.yml  cicd-pipeline-cancel.yml  cicd-pipeline.yml  clean-github-cache.yml  codeql.yml  docker-build.yml  docs.yml  draft-pr-converter.yml  fm-command.yml  follow-merge-dispatch.yml  follow-merge-sync-pr.yml  follow-merge-upstream-repo-sync-v2.yml  follow-merge-upstream-repo-sync.yml  git-command.yml  gitleaks.yml  help-command.yml  jira-command.yml  release-cut-off-release-branch.yml  release-pipeline.yml  release-set-version.yml  release.yml  slash-command-dispatch.yml  tests.yml  update-draft-release.yml  validator-poetry-lock.yml
adala/: README.md  __init__.py  analyst.py  cli.py  engineer.py  labeler.py  main.py
adala/_deprecated/agents/: gen.py  labeler.py
adala/_deprecated/labelers/: base.py
adala/_deprecated/optimizers/: llm_instructions.py
adala/_deprecated/quality/: uncertainty.py
adala/agents/: __init__.py  base.py  engineer.py  main.py  multi_step_planner.py  single_shot.py
adala/agents/labeling/: AutonomousLabellingAgent.py
adala/agents/prompts/: labeler.txt
adala/analyzers/: base.py
adala/core/: MIGRATION.md  README.md  __init__.py  label_studio.py  processor.py
adala/datasets/: __init__.py  base.py  dataframe.py  label_studio.py  pandas_dataframe.py  pd_dataframe.py
adala/environments/: __init__.py  base.py  code.py  code_env.py  console.py  kafka.py  static_env.py  web.py
adala/environments/servers/: base.py  discord_bot.py
adala/envs/: base.py  dataset.py  terminal.py
adala/examples/: __init__.py  basic_tutorial.ipynb  classification_single_shot_llm.py  classification_skill_with_CoT.ipynb  creating_new_skill.ipynb  quickstart.ipynb  translation_skill.ipynb  tutorial_label_studio.ipynb
adala/instructions/: optimizer.py
adala/labelers/: base.py
adala/labeling/: human.py
adala/legacy/: __init__.py
adala/legacy/agents/: __init__.py
adala/legacy/environments/: __init__.py  code_env.py  console.py  kafka.py  web.py
adala/legacy/memories/: __init__.py  base.py
adala/legacy/skills/: __init__.py  _base.py
adala/memories/: __init__.py  base.py  file_memory.py  qdrant_memory.py  vectordb.py
adala/optimizers/: base.py  llm_instructions.py
adala/predictors/: __init__.py  base.py
adala/predictors/prompts/: simple_classification.txt
adala/prompts/: analyst.txt  engineer_human_message.txt  labeler.txt
adala/runtimes/: __init__.py  _batch.py  _guidance.py  _langchain.py  _litellm.py  _openai.py  _vllm.py  base.py  batch_llm.py  constrained.py  openai.py  openai_gpt.py
adala/server/: Dockerfile.app  Dockerfile.worker  app.py  docker-compose.yml  requirements.txt  test_server.py
adala/server/tasks/: process_file.py
adala/server/ui/: package-lock.json
adala/skills/: __init__.py  _base.py  base.py  code.py  labeling.py  llm.py  llm_skills.py  skillset.py
adala/skills/collection/: analyze_errors.py  qa.py  (+12 more)
adala/tools/: base.py
adala/utils/: exceptions.py  gsheet.py  internal_data.py  llm.py  llm_utils.py  logs.py  matching.py  message_builder.py  model_info_utils.py  parse.py  pydantic_generator.py  registry.py  token_counter.py  types.py
adala/validators/: base.py
adala/web/: api.py  connector.py  db.old.py  db.py  enum.py  exceptions.py  models.py  schema.py  server.py  settings.py
adala/workflows/: base.py
agents/: index.html
docs/: README.md  api.rst  conf.py  index.rst  mkdocs.yml  requirements.txt
docs/src/: agents.md  datasets.md  environments.md  index.md  memories.md  runtimes.md  skills.md  utils.md
environments/: index.html
etc/nginx/: nginx.conf
examples/: Infer labels.ipynb  classification_skill.ipynb  classification_skill_with_CoT.ipynb  code_generation.ipynb  gsm8k_test.ipynb  keyword_extraction_skill.ipynb  ontology_creator.ipynb  question_answering_skill.ipynb  quickstart.ipynb  simplified_classification.py  simplified_label_studio.py  skillsets_sequence_of_skills.ipynb  summarization_skill.ipynb  text_generation_skill.ipynb  translation_skill.ipynb
examples/fast-api-client/: README.md  pyproject.toml
examples/templates/: classification.yml  cot.yml  cot_sc.yml  rest.yaml
memories/: index.html
runtimes/: index.html
search/: search_index.json
server/: .env.example  README.md  api_codegen.sh  app.py  log_middleware.py  prompt_improvement_skill.py  test_server.py  utils.py
server/handlers/: result_handlers.py
server/tasks/: process_file.py  queue_terminator.py  stream_inference.py
server/ui/: package-lock.json  package.json
server/worker_pool/: README.md  __init__.py  api.py  celery_integration.py  output_processor.py  processor.py  restart_utils.py  status.py  worker_processor.py
skills/: index.html
tests/: conftest.py  jsonrecords.json  requirements-test.txt  test_agent_basics.py  test_agent_custom_model.py  test_agent_with_rag.py  test_analysis_skill.py  test_classification.py  test_cost_estimation.py  test_custom_endpoints.py  test_environments.py  test_label_studio_skill.py  test_llm.py  test_llm_parallel_skillset.py  test_llm_skillset.py  test_llm_utils.py  test_message_builder.py  test_multiimage_support.py  test_openai_runtime.py  test_parse.py  test_pydantic_generator.py  test_rag.py  test_refine_skill.py  test_serialization.py  test_server.py  test_skills.py  test_stream_inference.py  test_worker_pool_api.py  utils.py
tests/manual_test_scripts/: auth_proxy_server.py
utils/: index.html
(+169 files in other folders)
