[project]
name = "adala"
version = "0.0.4dev"
description = "Adala: Autonomous Data Labeling Agent"
authors = [
    { name = "HumanSignal", email = "support@humansignal.com" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"

[project.urls]
Repository = "https://github.com/HumanSignal/Adala"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
pandas = "2.2.3"
openai = "^1.60.2"
guidance = "0.0.64"
pydantic = "^2"
rich = "^13"
aiosqlite = "^0.19.0"
chromadb = "^0.5.7"
durationpy = "^0.9"
tenacity = "^8.2.3"
gspread = "^5.12.3"
datasets = "^2.16.1"
aiohttp = "^3.9.3"
boto3 = "^1.34.38"
aiokafka = "^0.11.0"
# these are for the server
# they would be installed as `extras` if poetry supported version strings for extras, but it doesn't
# https://github.com/python-poetry/poetry/issues/834
# they also can't be installed as a `group`, because those are for dev dependencies only and could not be included if this package was pip-installed
redis-om = "*"
fastapi = "^0.115.6"
celery = {version = "^5.3.6", extras = ["redis"]}
kombu = ">=5.4.0rc2" # Pin version to fix https://github.com/celery/celery/issues/8030. TODO: remove when this fix will be included in celery
uvicorn = "*"
pydantic-settings = "^2.9.0"
label-studio-sdk = {url = "https://github.com/HumanSignal/label-studio-sdk/archive/a0223aa8bc8c5de18c8312d4907881d97f682a3d.zip"}
requests = "^2.32.0"
# Using litellm from forked repo until vertex fix is released: https://github.com/BerriAI/litellm/issues/7904
#litellm = "^1.47.2"
litellm = {url = "https://github.com/HumanSignal/litellm/archive/9deadf35b9b2ff351388abc3a2ea144ed93ca013.zip"}
pandarallel = "^1.6.5"
instructor = "1.4.3"
async-lru = "^2.0.5"
jinja2 = ">=3.1.6,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
black = "^24.8.0"
pytest-black = "^0.3.12"
mkdocs = "^1.5.3"
mkdocs-jupyter = "^0.24.3"
mkdocs-material = "^9.4.7"
mkdocstrings-python = "^1.7.3"
ipykernel = "^6.28.0"
jupyter = "^1.0.0"
jupyterlab = "^4.2.5"
jupyter-client = "8.4.0"
matplotlib = "^3.7.4"
fakeredis = "^2.23.2"
flower = "^2.0.1"
pytest-asyncio = "0.23.8"
celery = {extras = ["pytest"], version = "^5.4.0"}
mockafka-py = "^0.1.57"
pytest-recording = "0.13.2"
mypy = "^1.15.0"
pytest-benchmark = "^5.1.0"
pytest-profiling = "^1.8.1"

[tool.poetry.scripts]
adala = "adala.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-m 'not (use_openai or use_azure or use_server)'"
testpaths = [
    "tests",
]

#[tool.poetry.extras]
#label-studio = ["label-studio-sdk @ git+https://github.com/HumanSignal/label-studio-sdk.git@pd-support"]
#docs = ["sphinx>=7.1.2", "sphinx-rtd-theme>=1.3.0", "myst-parser>=2.0.0"]
