[project]
name = "adala"
version = "0.0.4dev"
description = "Adala: Autonomous Data Labeling Agent"
authors = [
    { name = "HumanSignal", email = "support@humansignal.com" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (==2.2.3)",
    "openai (>=1.60.2,<2.0.0)",
    "guidance (==0.0.64)",
    "pydantic (>=2,<3)",
    "rich (>=13,<14)",
    "aiosqlite (>=0.19.0,<0.20.0)",
    "chromadb (>=0.5.7,<0.6.0)",
    "durationpy (>=0.9,<0.10)",
    "tenacity (>=8.2.3,<9.0.0)",
    "gspread (>=5.12.3,<6.0.0)",
    "datasets (>=2.16.1,<3.0.0)",
    "aiohttp (>=3.9.3,<4.0.0)",
    "boto3 (>=1.34.38,<2.0.0)",
    "aiokafka (>=0.11.0,<0.12.0)",
    # these are for the server
    # they would be installed as `extras` if poetry supported version strings for extras, but it doesn't
    # https://github.com/python-poetry/poetry/issues/834
    # they also can't be installed as a `group`, because those are for dev dependencies only and could not be included if this package was pip-installed
    "redis-om",
    "fastapi",
    "celery[redis] (>=5.3.6,<6.0.0)",
    "kombu (>=5.4.0rc2)",
    "uvicorn",
    "pydantic-settings (>=2.9.0,<3.0.0)",
    "label-studio-sdk @ https://github.com/HumanSignal/label-studio-sdk/archive/4ea4107432738fa2539914cb1f8d7e6e66a6bf2b.zip",
    "requests (>=2.32.0,<3.0.0)",
    # Using litellm from forked repo until vertex fix is released: https://github.com/BerriAI/litellm/issues/7904
    #litellm = "^1.47.2"
    "litellm @ https://github.com/HumanSignal/litellm/archive/9deadf35b9b2ff351388abc3a2ea144ed93ca013.zip",
    "pandarallel (>=1.6.5,<2.0.0)",
    "instructor (==1.4.3)",
    "async-lru (>=2.0.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0)"
]

[project.urls]
Repository = "https://github.com/HumanSignal/Adala"

[project.scripts]
adala = "adala.cli:main"
[tool.poetry]
requires-poetry = '>=2.0.0,<3.0.0'
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
black = "^24.8.0"
pytest-black = "^0.3.12"
mkdocs = "^1.5.3"
mkdocs-jupyter = "^0.24.3"
mkdocs-material = "^9.4.7"
mkdocstrings-python = "^1.7.3"
ipykernel = "^6.28.0"
jupyter = "^1.0.0"
jupyterlab = "^4.2.5"
jupyter-client = "8.4.0"
matplotlib = "^3.7.4"
fakeredis = "^2.23.2"
flower = "^2.0.1"
pytest-asyncio = "0.23.8"
celery = {extras = ["pytest"], version = "^5.4.0"}
pytest-recording = "0.13.2"
mypy = "^1.15.0"
pytest-benchmark = "^5.1.0"
pytest-profiling = "^1.8.1"
openai-responses = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-m 'not (use_openai or use_azure or use_server)'"
testpaths = [
    "tests",
]

#[tool.poetry.extras]
#label-studio = ["label-studio-sdk @ git+https://github.com/HumanSignal/label-studio-sdk.git@pd-support"]
#docs = ["sphinx>=7.1.2", "sphinx-rtd-theme>=1.3.0", "myst-parser>=2.0.0"]
